@@ -1,3 +1,9 @@
+2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* frobauth-mod.c (frobauth_modify): Don't use MOVE_SEND in Hurd RPC.
+	* msgport.c (do_setfd, cmd_chcwdir, cmd_cdroot, cmd_chcrdir):
+	Likewise. 
+
 2000-02-08  Roland McGrath  <roland@baalperazim.frob.com>
 
 	Remove the su utility, which is incompatible with traditional su
